# Lab2

Lab2/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp
