# CMakeList.txt: проект CMake для CMakeProject2; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (task1 "task1.cpp")
add_executable (task2 "task2.cpp")
add_executable (task3 "task3.cpp")
# TODO: Добавьте тесты и целевые объекты, если это необходимо.
